--- a/code/analysis_aicha.ipynb
+++ b/code/analysis_aicha.ipynb
@@ -14,30 +14,35 @@
     "import sys\n",
     "\n",
     "sys.path.insert(1, '/homes_unix/agillig/Projects/FabricOfCognition/code')\n",
-    "import Fabricofcognition as FC\n",
+    "import func_toolbox as ftools\n",
+    "from func_toolbox import fetch_neurosynth_data\n",
     "\n",
     "# import plotly.graph_objects as go\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from pathlib import Path\n",
     "import os\n",
-    "from sklearn.neighbors import KernelDensity\n",
-    "from sklearn.cluster import AgglomerativeClustering\n",
-    "from scipy.spatial import Delaunay\n",
-    "import  scipy.spatial.distance as dist\n",
     "\n",
     "\n",
     "from nilearn import image\n",
     "\n",
-    "project_dir = '/homes_unix/agillig/Projects/FabricOfCognition'\n",
-    "BCS_terms_file = project_dir + '/fabricogcognition_valentina/BCS_3D.csv'\n",
+    "project_dir = '/homes_unix/agillig/github_repos/ginna' #indicate path to the repository\n",
+    "\n",
+    "neurosynth_terms_file = project_dir + '/data/terms/BCS_3D.csv'\n",
+    "os.makedirs(Path(neurosynth_terms_file).parent, exist_ok=True)\n",
+    "\n",
+    "# download the file from the Pacela et al. 2021 paper repo \n",
+    "# https://github.com/vale-pak/BCS\n",
+    "\n",
+    "if not os.path.exists(neurosynth_terms_file):\n",
+    "    fetch_neurosynth_data(f'{project_dir}/data')\n",
+    "\n",
     "# https://github.com/vale-pak/BCS/blob/main/BCS_3D.csv\n",
-    "df = pd.read_csv(BCS_terms_file, sep = ',')\n",
+    "df = pd.read_csv(neurosynth_terms_file, sep = ',')\n",
     "\n",
-    "BCSterms = df['Functions']\n",
+    "neurosynth_terms = df['Functions']\n",
     "\n",
-    "BCScoords = np.asarray(df[['X', 'Y', 'Z']])\n",
-    "\n",
-    "fcu = FC.utilities()\n",
+    "fcu = ftools.Utilities()\n",
     "atlas_str = \"aicha-aal3\"\n",
     "\n",
     "# create a new directory for the analysis\n",
@@ -45,23 +50,6 @@
     "os.makedirs(analysis_dir, exist_ok=True)\n",
     "\n",
     "mip_rsn_dir = project_dir + f'/Results/mip/mip_rsn_parcellated/aicha'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import csv\n",
-    "\n",
-    "\n",
-    "# Open the file in write mode ('w')\n",
-    "with open('terms_list.csv', 'w', newline='') as file:\n",
-    "    writer = csv.writer(file)\n",
-    "\n",
-    "    # Write the list of strings to the file\n",
-    "    writer.writerow(BCSterms.tolist())"
    ]
   },
   {
@@ -80,69 +68,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parcellation_atlas_file = f'{project_dir}/data/parcellation_atlases/aicha-aal3/parcels_aicha-aal3.nii.gz'\n",
+    "\n",
+    "# the atlas is already present in the github repository\n",
+    "if not os.path.exists(parcellation_atlas_file):\n",
+    "        atlases_dir = ''\n",
+    "        file_cortical = atlases_dir + '/AICHA_v2_websiteC/AICHA.nii'\n",
+    "        file_subcortical = atlases_dir + '/AAL3/AAL3v1.nii'\n",
+    "\n",
+    "        cortical_img = image.load_img(file_cortical)\n",
+    "        new_data = np.zeros_like(cortical_img.get_fdata(), dtype = 'int32')\n",
+    "\n",
+    "        cortical_data = image.load_img(file_cortical).get_fdata()\n",
+    "        subcortical_data = image.load_img(file_subcortical).get_fdata()\n",
+    "        # cortical\n",
+    "        max_cortical = np.max(cortical_data)\n",
+    "        for i, value in enumerate(np.unique(cortical_data)[1:]):\n",
+    "                new_data[cortical_data == value] = i + 1 \n",
+    "        # cerebellum\n",
+    "        # indices : from 95-120 for cerebellum; 121-170 for subcrotcial/brainstem\n",
+    "        for i, value in enumerate([l for l in range(95 , 121)]):\n",
+    "                new_data[subcortical_data == value] = max_cortical + i + 1 \n",
+    "\n",
+    "        new_img = image.new_img_like(cortical_img, new_data)\n",
+    "        out_map = parcellation_atlas_file\n",
+    "        os.makedirs(os.path.dirname(out_map), exist_ok=True)\n",
+    "        # new_img.to_filename(out_map)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "atlases_dir = '/homes_unix/agillig/Atlases'\n",
-    "file_cortical = atlases_dir + '/AICHA_v2_websiteC/AICHA.nii'\n",
-    "file_subcortical = atlases_dir + '/AAL3/AAL3v1.nii'\n",
+    "# proj = ftools.concatenate_all_rsn_projections()\n",
     "\n",
-    "cortical_img = image.load_img(file_cortical)\n",
-    "new_data = np.zeros_like(cortical_img.get_fdata(), dtype = 'int32')\n",
+    "# fcu_mean = FC.utilities()\n",
+    "# fcu_mean.analysis_dir = '/analysis/mean_RSNs'\n",
+    "# proj_m = fcu_mean.concatenate_all_rsn_projections()\n",
     "\n",
-    "cortical_data = image.load_img(file_cortical).get_fdata()\n",
-    "subcortical_data = image.load_img(file_subcortical).get_fdata()\n",
-    "# cortical\n",
-    "max_cortical = np.max(cortical_data)\n",
-    "for i, value in enumerate(np.unique(cortical_data)[1:]):\n",
-    "        new_data[cortical_data == value] = i + 1 \n",
-    "# cerebellum\n",
-    "# indices : from 95-120 for cerebellum; 121-170 for subcrotcial/brainstem\n",
-    "for i, value in enumerate([l for l in range(95 , 121)]):\n",
-    "        new_data[subcortical_data == value] = max_cortical + i + 1 \n",
+    "# filestr = [f'rsn-{r:02d}'for r in df['rsn'].unique()]\n",
+    "# rsn_int = [int(i) for i in proj['rsn'].unique()]\n",
     "\n",
-    "new_img = image.new_img_like(cortical_img, new_data)\n",
-    "out_map = project_dir + f'/analysis/parcellation_atlases/aicha_aal3/parcels_aicha-aal3.nii.gz'\n",
-    "os.makedirs(os.path.dirname(out_map), exist_ok=True)\n",
-    "# new_img.to_filename(out_map)\n",
+    "# rsns to exclude\n",
+    "# exclude = ['05', '34', '40'] # 34 bg, 40 artifact\n",
     "\n",
-    "atlas_file = out_map"
+    "# rsn_int = [i for i in rsn_int if np.isin(f'{i:02d}', exclude) == False]\n",
+    "\n",
+    "# rsn_str = [f'{el:02d}' for el in rsn_int]\n",
+    "# filestr = [f'{i:02d}' for i in rsn_int]\n",
+    "\n",
+    "# n_rsn = len(rsn_str)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading existing file\n",
-      "loading existing file\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "proj = fcu.concatenate_all_rsn_projections()\n",
-    "\n",
-    "fcu_mean = FC.utilities()\n",
-    "fcu_mean.analysis_dir = '/analysis/mean_RSNs'\n",
-    "proj_m = fcu_mean.concatenate_all_rsn_projections()\n",
-    "\n",
-    "# filestr = [f'rsn-{r:02d}'for r in df['rsn'].unique()]\n",
-    "rsn_int = [int(i) for i in proj['rsn'].unique()]\n",
-    "\n",
-    "# rsns to exclude\n",
-    "exclude = ['05', '34', '40'] # 34 bg, 40 artifact\n",
-    "\n",
-    "rsn_int = [i for i in rsn_int if np.isin(f'{i:02d}', exclude) == False]\n",
-    "\n",
-    "rsn_str = [f'{el:02d}' for el in rsn_int]\n",
-    "filestr = [f'{i:02d}' for i in rsn_int]\n",
-    "\n",
-    "n_rsn = len(rsn_str)"
+    "atlas_dir = f'{project_dir}/atlas/zmaps'\n",
+    "rsn_files = [os.path.join(atlas_dir, f) for f in os.listdir(atlas_dir) if f.endswith('.nii')]\n",
+    "rsn_files.sort()"
    ]
   },
   {
@@ -152,12 +144,14 @@
    "outputs": [],
    "source": [
     "# # # Create A 4D volume with all 506 maps of the model\n",
-    "terms_maps_dir = '/homes_unix/agillig/Projects/FabricOfCognition/fabricogcognition_valentina/BCS_repo/Originals_2017_dataset'\n",
+    "# this may take a few min\n",
+    "terms_maps_dir = f'{project_dir}/data/dataset'\n",
     "terms_maps_files = [os.path.join(terms_maps_dir, f) for f in os.listdir(terms_maps_dir) if f.endswith('.nii.gz')]\n",
     "terms_maps_files.sort()\n",
-    "out_dir = project_dir + '/analysis/BCS_dataset'\n",
+    "\n",
+    "out_dir = f'{terms_maps_dir}/concatenated'\n",
     "os.makedirs(out_dir, exist_ok=True)\n",
-    "parcel_str = 'aicha-aal3'\n",
+    "\n",
     "out_name = out_dir + '/dataset_concatenated.nii.gz'\n",
     "if os.path.isfile(out_name) == False:\n",
     "    image.concat_imgs(terms_maps_files).to_filename(out_name)\n",
@@ -172,34 +166,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CREATE & retrieve parcellated 506 meta analytic maps\n",
+    "# Create & retrieve parcellated 506 meta analytic maps\n",
+    "# should also take a few minutes, but needs to be done only once\n",
+    "\n",
     "n_terms = concat_ds.shape[3]\n",
     "\n",
-    "bcs_parcellated_dir = project_dir + f'/analysis/tabular_data/parcellations/{atlas_str}'\n",
-    "bcs_parcellated_file = os.path.join(bcs_parcellated_dir, f'BCSterms_parcellations_{atlas_str}.csv')\n",
-    "os.makedirs(bcs_parcellated_dir, exist_ok=True)\n",
+    "parcellated_dataset_dir = f'{project_dir}/data/dataset/parcellated/{atlas_str}'\n",
+    "os.makedirs(parcellated_dataset_dir, exist_ok=True)\n",
     "\n",
-    "from tqdm.auto import tqdm\n",
+    "parcellated_dataset_file = os.path.join(parcellated_dataset_dir, f'neurosynthterms_parcellations_{atlas_str}.csv')\n",
+    "\n",
     "parcellated = []\n",
-    "if os.path.isfile(bcs_parcellated_file) == False:\n",
-    "    for t in tqdm(range(n_terms)):\n",
+    "\n",
+    "if os.path.isfile(parcellated_dataset_file) == False:\n",
+    "    for t in range(n_terms):\n",
     "        temp_img = image.index_img(concat_ds, t)\n",
-    "        parcellated.append(fcu.parcellate(temp_img, atlas=atlas_file))\n",
+    "        parcellated.append(fcu.parcellate(temp_img, atlas=parcellation_atlas_file))\n",
     "\n",
     "    parcellated = np.array(parcellated).squeeze()\n",
-    "    terms = BCSterms.values\n",
+    "    terms = neurosynth_terms.values\n",
     "    # print(parcellated.shape)\n",
     "    parcels = [i for i in range(1, parcellated.shape[1] +1)]\n",
     "    df = pd.DataFrame(parcellated, index=terms, columns = parcels)\n",
-    "    df.to_csv(bcs_parcellated_file)\n",
+    "    df.to_csv(parcellated_dataset_file)\n",
     "\n",
-    "bcs_parcellated = pd.read_csv(bcs_parcellated_file, sep = ',', index_col = 0)\n",
+    "dataset_parcellated = pd.read_csv(parcellated_dataset_file, sep = ',', index_col = 0)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,22 +206,24 @@
     "parcellation_dir = analysis_dir + '/parcellations'\n",
     "os.makedirs(parcellation_dir, exist_ok=True)\n",
     "\n",
+    "\n",
+    "rsn_str = pd.DataFrame(rsn_files).iloc[:,0].str.split('/').str[-1].str[-6:-4]\n",
+    "\n",
     "for i, rsn in enumerate(rsn_str):\n",
     "    parcellation_file = parcellation_dir + f'/rsn-{rsn}/rsn-{rsn}_unique_parcellated.csv'\n",
     "    os.makedirs(os.path.dirname(parcellation_file), exist_ok=True)\n",
-    "    # if rsn != '01':\n",
-    "    #     continue\n",
+    "\n",
     "    index = int(rsn) - 1\n",
     "    # tmp_data = image.index_img(atlas_img, index)\n",
     "    # affine = tmp_img.affine\n",
     "    if os.path.isfile(parcellation_file) == False:\n",
-    "        tmp_img = image.index_img(atlas_img, index)\n",
-    "        tmp_parcellatd = fcu.parcellate(tmp_img, atlas=atlas_file)\n",
+    "        tmp_img = image.load_img(rsn_files[index])\n",
+    "        tmp_parcellatd = fcu.parcellate(tmp_img, atlas=parcellation_atlas_file)\n",
     "        np.savetxt(parcellation_file, tmp_parcellatd, delimiter = ',')\n",
     "    data = np.loadtxt(parcellation_file, delimiter = ',')\n",
     "\n",
     "\n",
-    "    corr_temp = [np.corrcoef(data, bcs_parcellated.iloc[j,:])[1,0] for j in range(n_terms)]\n",
+    "    corr_temp = [np.corrcoef(data, dataset_parcellated.iloc[j,:])[1,0] for j in range(n_terms)]\n",
     "\n",
     "    # corr_temp = []\n",
     "    # for j, (term, file) in enumerate(zip(BCSterms, BCS_maps_files)): \n",
@@ -232,48 +231,6 @@
     "    #     data_comparison = img_comparison.get_fdata().copy()\n",
     "    #     corr_temp.append(np.corrcoef(data.flatten(), data_comparison.flatten())[1,0])\n",
     "    spatial_correlation[rsn] = corr_temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create mip nilearn-style for each rsn, parcellation version\n",
-    "rsns_maps = '/homes_unix/agillig/Atlases/RSN_N41_zNpair_clean1.nii'\n",
-    "parcellation_atlas = atlas_file\n",
-    "from nilearn import plotting\n",
-    "from nilearn.image import index_img\n",
-    "from nilearn import image\n",
-    "parcellation_img = image.load_img(parcellation_atlas)\n",
-    "parcellation_data = parcellation_img.get_fdata()\n",
-    "for i, rsn in enumerate(rsn_str):\n",
-    "\n",
-    "    mip_rsn_dir = project_dir + f'/Results/mip/mip_rsn_parcellated/aicha'\n",
-    "    os.makedirs(mip_rsn_dir, exist_ok=True)\n",
-    "    out_mip_img = f'{mip_rsn_dir}/rsn-{rsn}_mip.png'\n",
-    "    if os.path.isfile(out_mip_img):\n",
-    "        continue\n",
-    "    \n",
-    "    ind = int(rsn_str[i]) -1\n",
-    "    img = index_img(rsns_maps, ind)\n",
-    "    array_data = fcu.parcellate(img, atlas=atlas_file).squeeze()\n",
-    "    \n",
-    "\n",
-    "    new_data = np.zeros_like(img.get_fdata())\n",
-    "\n",
-    "    # For each unique value in the parcellation data (excluding zero),\n",
-    "    # set the corresponding voxels in the new data to the value from the array\n",
-    "    for i in np.unique(parcellation_data)[1:]:\n",
-    "        new_data[parcellation_data == i] = array_data[int(i) - 1]\n",
-    "\n",
-    "    new_img = image.new_img_like(parcellation_img, new_data)\n",
-    "    out_map = parcellation_dir + f'/maps_parcellated/rsn-{rsn}/rsn-{rsn}_map_parcellated.nii.gz'\n",
-    "    os.makedirs(os.path.dirname(out_map), exist_ok=True)\n",
-    "    new_img.to_filename(out_map)\n",
-    "    \n",
-    "    mip_rsn = plotting.plot_glass_brain(new_img, colorbar=True, output_file=f'{mip_rsn_dir}/rsn-{rsn}_mip.png')"
    ]
   },
   {
@@ -292,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,18 +259,20 @@
     "\n",
     "# once computed, for each rsn, compute the correlation of the null parcellations with the 506 meta analytic maps (parcellated)\n",
     "\n",
+    "n_perm = 100 # number of permutations per batch\n",
+    "n_batches = 1 # number of batches. can be useful to split the work in a cluster environment\n",
+    "total_n_perm = int(n_perm * n_batches)\n",
+    "\n",
     "null_dir = analysis_dir + '/null_correlations'\n",
-    "def compute_correlation_null(rsn):\n",
+    "def compute_correlation_null(rsn, n_perm = 1000, n_batches = 10, overwrite = False):\n",
     "    print(f'processing rsn {rsn}')\n",
-    "    n_batches = 10\n",
-    "    n_perm = 1000\n",
     "\n",
     "    null_dir = analysis_dir + '/null_correlations'\n",
     "    save_dir = null_dir + f'/rsn-{rsn}'\n",
     "    os.makedirs(save_dir, exist_ok=True)\n",
     "    save_file = os.path.join(save_dir, f'rsn-{rsn}_null_correlations.csv')    \n",
     "\n",
-    "    if os.path.isfile(save_file):\n",
+    "    if os.path.isfile(save_file) and overwrite == False:\n",
     "        print('file already exists; no overwriting')\n",
     "        return\n",
     "    \n",
@@ -332,7 +291,7 @@
     "    corr_temp = []\n",
     "    for j in range(n_terms):\n",
     "        \n",
-    "        term_single = bcs_parcellated.iloc[j,:].values\n",
+    "        term_single = dataset_parcellated.iloc[j,:].values\n",
     "        # Compute the Pearson correlation coefficient for each column\n",
     "        corr_temp.append([np.corrcoef(data.T[:, i], term_single)[0,1] for i in range(n_perm * n_batches)])\n",
     "\n",
@@ -345,12 +304,13 @@
     "    # spatial_correlation_null[rsn] = corr_temp\n",
     "    # save to file\n",
     "    print('saving file')\n",
-    "    np.savetxt(save_file, corr_temp) "
+    "    np.savetxt(save_file, corr_temp) \n",
+    "    return corr_temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,6 +319,56 @@
     "# spatial_correlation_null = {}\n",
     "# with Pool() as pool:\n",
     "#     pool.map(compute_correlation_null, rsn_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing rsn 01\n",
+      "batch 1\n",
+      "generating 10 surrogates\n",
+      "elapsed time: 2.85 s\n",
+      "saving surrogate maps to /homes_unix/agillig/github_repos/ginna/analysis/mean_RSNs_aicha-aal3/null_parcellations/rsn-01/rsn-01_null_parcellations_batch-01_of_1.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "from null_parcellations import generate_null\n",
+    "import importlib\n",
+    "import null_parcellations\n",
+    "importlib.reload(null_parcellations)\n",
+    "null_parcellations.generate_null(1, project_dir, n_perm=10, n_batches=n_batches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing rsn 01\n",
+      "saving file\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = compute_correlation_null('01', n_perm=10, n_batches=1, overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#stopped here"
    ]
   },
   {
@@ -407,7 +417,7 @@
    "source": [
     "# 1. compute p-value for each term / RSN association\n",
     "# compute p-value for each term / RSN association\n",
-    "n_terms = len(BCSterms)\n",
+    "n_terms = len(neurosynth_terms)\n",
     "# p_val_list = []\n",
     "\n",
     "def compute_all_pval_uncor(ind):\n",
@@ -635,9 +645,9 @@
     "selected_terms_list = []\n",
     "pvals_list = []\n",
     "for i, rsn in enumerate(rsn_str):\n",
-    "    selected_terms[rsn] = BCSterms[results_cor[i]['pvals'] < 0.05].tolist()\n",
+    "    selected_terms[rsn] = neurosynth_terms[results_cor[i]['pvals'] < 0.05].tolist()\n",
     "    pvals[rsn] = results_cor[i]['pvals'][results_cor[i]['pvals'] < 0.05]\n",
-    "    selected_terms_list.append(BCSterms[results_cor[i]['pvals'] < 0.05].tolist())\n",
+    "    selected_terms_list.append(neurosynth_terms[results_cor[i]['pvals'] < 0.05].tolist())\n",
     "    pvals_list.append(results_cor[i]['pvals'][results_cor[i]['pvals'] < 0.05])"
    ]
   },
@@ -666,12 +676,13 @@
     "str_terms_sel_p = []\n",
     "str_p_sel = []\n",
     "list_dist_sel = []\n",
+    "\n",
     "for i, rsn in enumerate(rsn_str):\n",
     "\n",
     "        dst = observed_correlations_all_cor[i]\n",
     "        pval = pvals_all_cor[i] \n",
     "\n",
-    "        sel_terms_p = BCSterms[pval < 0.05].tolist()\n",
+    "        sel_terms_p = neurosynth_terms[pval < 0.05].tolist()\n",
     "        sel_p = pval[pval < 0.05]\n",
     "\n",
     "        def format_decimal(val):\n",
@@ -714,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
