--- a/code/analysis_aicha.ipynb
+++ b/code/analysis_aicha.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,12 @@
     "n_perm = 100 # number of permutations per batch; reduced for the sake of the example (publication: 10,000)\n",
     "n_batches = 1 # number of batches. can be useful to split the work in a cluster environment\n",
     "\n",
-    "compute_all_rsns = False # if True, compute all RSNs; if False, compute only RSN01 as an example"
+    "compute_all_rsns = False # if True, compute all RSNs; if False, compute only RSN05 as an example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,8 @@
     "import os\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
+    "from scipy.stats import zscore\n",
+    "from sklearn.decomposition import PCA\n",
     "\n",
     "\n",
     "neurosynth_terms_file = project_dir + '/data/terms/BCS_3D.csv'\n",
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +213,7 @@
     "rsn_str = pd.DataFrame(rsn_files).iloc[:,0].str.split('/').str[-1].str[-6:-4]\n",
     "\n",
     "if compute_all_rsns == False:\n",
-    "    rsn_str = [rsn_str[0]] #limited to RSN01 to reduce computation time\n",
+    "    rsn_str = [rsn_str[4]] #limited to RSN05 to reduce computation time\n",
     "\n",
     "for i, rsn in enumerate(rsn_str):\n",
     "    parcellation_file = parcellation_dir + f'/rsn-{rsn}/rsn-{rsn}_unique_parcellated.csv'\n",
@@ -241,19 +243,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "processing rsn 01\n",
+      "processing rsn 05\n",
       "batch 1\n",
       "generating 100 surrogates\n",
-      "elapsed time: 26.73 s\n",
-      "saving surrogate maps to /homes_unix/agillig/github_repos/ginna/analysis/mean_RSNs_aicha-aal3/null_parcellations/rsn-01/rsn-01_null_parcellations_batch-01_of_1.csv\n",
-      "processing rsn 01\n",
+      "elapsed time: 24.85 s\n",
+      "saving surrogate maps to /homes_unix/agillig/github_repos/ginna/analysis/mean_RSNs_aicha-aal3/null_parcellations/rsn-05/rsn-05_null_parcellations_batch-01_of_1.csv\n",
+      "processing rsn 05\n",
       "saving file\n"
      ]
     }
@@ -266,8 +268,8 @@
     "# once computed, for each rsn, compute the correlation of the null parcellations with the 506 meta analytic maps (parcellated)\n",
     "\n",
     "for rsn in rsn_str:\n",
-    "    null_parcellations.generate_null(1, project_dir, n_perm=n_perm, n_batches=n_batches)\n",
-    "    null_distr = fcu.compute_correlation_null(rsn='01', n_perm=n_perm, n_batches=n_batches, overwrite=True) #set overwrite to False if you have already computed the null distributions\n",
+    "    null_parcellations.generate_null(int(rsn), project_dir, n_perm=n_perm, n_batches=n_batches)\n",
+    "    null_distr = fcu.compute_correlation_null(rsn=rsn, n_perm=n_perm, n_batches=n_batches, overwrite=True) #set overwrite to False if you have already computed the null distributions\n",
     "\n",
     "    p, pcor = fcu.compute_pvalues(results[rsn]['spatial_correlation'], null_distr)\n",
     "\n",
@@ -280,12 +282,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Results summary for RSN01"
+    "# Results summary for RSN05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -318,44 +320,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>255</th>\n",
-       "      <td>mnemonic</td>\n",
-       "      <td>0.399498</td>\n",
+       "      <th>258</th>\n",
+       "      <td>money</td>\n",
+       "      <td>0.556019</td>\n",
        "      <td>0.009901</td>\n",
-       "      <td>0.099010</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.009901</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>362</th>\n",
-       "      <td>retrieval</td>\n",
-       "      <td>0.376930</td>\n",
+       "      <th>321</th>\n",
+       "      <td>preferences</td>\n",
+       "      <td>0.497313</td>\n",
        "      <td>0.009901</td>\n",
-       "      <td>0.148515</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.009901</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>349</th>\n",
-       "      <td>recollection</td>\n",
-       "      <td>0.371836</td>\n",
+       "      <th>84</th>\n",
+       "      <td>decision_making</td>\n",
+       "      <td>0.471232</td>\n",
        "      <td>0.009901</td>\n",
-       "      <td>0.158416</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.009901</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>457</th>\n",
-       "      <td>thoughts</td>\n",
-       "      <td>0.318702</td>\n",
+       "      <th>49</th>\n",
+       "      <td>choice</td>\n",
+       "      <td>0.454076</td>\n",
+       "      <td>0.009901</td>\n",
        "      <td>0.019802</td>\n",
-       "      <td>0.336634</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>memory_retrieval</td>\n",
-       "      <td>0.317122</td>\n",
+       "      <th>468</th>\n",
+       "      <td>value</td>\n",
+       "      <td>0.451444</td>\n",
        "      <td>0.009901</td>\n",
-       "      <td>0.336634</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.019802</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -366,42 +368,42 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>272</th>\n",
-       "      <td>movement</td>\n",
-       "      <td>-0.105119</td>\n",
-       "      <td>0.653465</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>390</th>\n",
-       "      <td>sensorimotor</td>\n",
-       "      <td>-0.105715</td>\n",
-       "      <td>0.683168</td>\n",
+       "      <th>482</th>\n",
+       "      <td>visual</td>\n",
+       "      <td>-0.116171</td>\n",
+       "      <td>0.732673</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>267</th>\n",
        "      <td>motor_imagery</td>\n",
-       "      <td>-0.107935</td>\n",
-       "      <td>0.683168</td>\n",
+       "      <td>-0.118895</td>\n",
+       "      <td>0.772277</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>imagery</td>\n",
+       "      <td>-0.122966</td>\n",
+       "      <td>0.811881</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>273</th>\n",
        "      <td>movements</td>\n",
-       "      <td>-0.117540</td>\n",
-       "      <td>0.673267</td>\n",
+       "      <td>-0.125567</td>\n",
+       "      <td>0.732673</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>265</th>\n",
        "      <td>motor</td>\n",
-       "      <td>-0.119462</td>\n",
-       "      <td>0.683168</td>\n",
+       "      <td>-0.126094</td>\n",
+       "      <td>0.782178</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -411,30 +413,113 @@
        "</div>"
       ],
       "text/plain": [
-       "                 term  spatial_correlation         p      pcor  is_significant\n",
-       "255          mnemonic             0.399498  0.009901  0.099010           False\n",
-       "362         retrieval             0.376930  0.009901  0.148515           False\n",
-       "349      recollection             0.371836  0.009901  0.158416           False\n",
-       "457          thoughts             0.318702  0.019802  0.336634           False\n",
-       "249  memory_retrieval             0.317122  0.009901  0.336634           False\n",
-       "..                ...                  ...       ...       ...             ...\n",
-       "272          movement            -0.105119  0.653465  1.000000           False\n",
-       "390      sensorimotor            -0.105715  0.683168  1.000000           False\n",
-       "267     motor_imagery            -0.107935  0.683168  1.000000           False\n",
-       "273         movements            -0.117540  0.673267  1.000000           False\n",
-       "265             motor            -0.119462  0.683168  1.000000           False\n",
+       "                term  spatial_correlation         p      pcor  is_significant\n",
+       "258            money             0.556019  0.009901  0.009901            True\n",
+       "321      preferences             0.497313  0.009901  0.009901            True\n",
+       "84   decision_making             0.471232  0.009901  0.009901            True\n",
+       "49            choice             0.454076  0.009901  0.019802            True\n",
+       "468            value             0.451444  0.009901  0.019802            True\n",
+       "..               ...                  ...       ...       ...             ...\n",
+       "482           visual            -0.116171  0.732673  1.000000           False\n",
+       "267    motor_imagery            -0.118895  0.772277  1.000000           False\n",
+       "194          imagery            -0.122966  0.811881  1.000000           False\n",
+       "273        movements            -0.125567  0.732673  1.000000           False\n",
+       "265            motor            -0.126094  0.782178  1.000000           False\n",
        "\n",
        "[506 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res_table = pd.DataFrame.from_dict(results['01']).sort_values(by='spatial_correlation', ascending=False)\n",
+    "res_table = pd.DataFrame.from_dict(results['05']).sort_values(by='spatial_correlation', ascending=False)\n",
     "res_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Complementary: Principal component analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rsn 05\n",
+      "explained variance: [0.28079161 0.25684348 0.19920988 0.14174494 0.1214101 ]\n",
+      "ordered loadings for PC01:\n",
+      "                     PC01      PC02      PC03      PC04      PC05\n",
+      "preferences      0.557958 -0.151097 -0.493970 -0.582350  0.287603\n",
+      "decision_making  0.508642  0.322498  0.525055 -0.299288 -0.521558\n",
+      "value            0.507006 -0.439341 -0.221607  0.613673 -0.352450\n",
+      "choice           0.380679  0.616471  0.029275  0.441104  0.528789\n",
+      "money            0.167317 -0.547822  0.656007 -0.011341  0.491349\n"
+     ]
+    }
+   ],
+   "source": [
+    "# z-score threshold for the RSN mask\n",
+    "thr = 1\n",
+    "\n",
+    "for i, rsn in enumerate(rsn_str):\n",
+    "\n",
+    "    rsn_results = results[rsn]\n",
+    "\n",
+    "    n_components = 10\n",
+    "    print(f'rsn {rsn}')\n",
+    "    # terms_maps_files[pvals_all_uncor[rsn_str.index(rsn)] < 0.05]\n",
+    "    # uncorrected\n",
+    "    \n",
+    "    n_pca_components = np.min((n_components,len(np.nonzero(rsn_results['is_significant'])[0])))\n",
+    "\n",
+    "    pca = PCA(n_components=n_pca_components, \n",
+    "              svd_solver='full')\n",
+    "\n",
+    "    # add masking of data with rsn map before computing pca\n",
+    "    rsn_img = image.load_img(rsn_files[i])\n",
+    "\n",
+    "    rsn_data = fcu.parcellate(rsn_img, atlas=parcellation_atlas_file).squeeze()\n",
+    "\n",
+    "\n",
+    "    # create a binary mask of the RSN map\n",
+    "    rsn_mask = np.array([1 if i > thr else 0 for i in rsn_data])\n",
+    "    rsn_regions = np.where(rsn_mask == 1)[0]\n",
+    "\n",
+    "\n",
+    "    rsn_terms_indices = np.where(rsn_results['is_significant'])[0]\n",
+    "    rsn_terms = neurosynth_terms.iloc[rsn_terms_indices]\n",
+    "    # print(f'significant terms for rsn {rsn}: {rsn_terms.values}')\n",
+    "    # skip if less than 3 terms are significant\n",
+    "    if len(rsn_terms_indices) < 3:\n",
+    "        print('less than 3 terms are significant, skipping')\n",
+    "        continue\n",
+    "\n",
+    "\n",
+    "    input_rsn_data = dataset_parcellated.iloc[rsn_terms_indices, rsn_regions].T\n",
+    "\n",
+    "    input_rsn_data = zscore(input_rsn_data)\n",
+    "    x_new = pca.fit_transform(input_rsn_data)\n",
+    "\n",
+    "    print(f'explained variance: {pca.explained_variance_ratio_}')\n",
+    "    rsn_results['pca'] = pca\n",
+    "\n",
+    "    pca_results = pd.DataFrame(pca.components_, \n",
+    "                               index=[f'PC{c:02d}' for c in range(1, pca.components_.shape[0] + 1)], \n",
+    "                               columns = rsn_terms.values).T\n",
+    "\n",
+    "    # loadings can be sorted in the following manner\n",
+    "    print(f'ordered loadings for PC01:')\n",
+    "    print(pca_results.sort_values(by='PC01', ascending=False))\n"
    ]
   }
  ],
